Upgrade versão Spring Boot e OpenAPI/Swagger